<resources>
    <string name="app_name">GSD</string>
    <string name="title_activity_main">Get Stuff Done!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startNewProject">Start new activity</string>
    <string name="welcomeText">Welcome</string>
    <string name="resumeProject">Continue old activity</string>
    <string name="title_activity_start_new_activity_time">StartNewActivityTime</string>
    <string name="topLeftButton" />
    <string name="topRightButton" />
    <string name="bottomLeftButton" />
    <string name="bottomRightButton" />
    <string name="testerButton" />
    <string name="startNewProjectText" />
    <string name="customTimeText" />
    <string name="title_activity_start_new_activity_category">StartNewActivityCategory</string>
    <string name="selectCategoryText" />
    <string name="cookingButton" />
    <string name="diyButton" />
    <string name="electronicsButton" />
    <string name="randomButton" />
    <string name="goButton" />
    <string name="title_activity_suggest_new_lesson">SuggestNewLesson</string>
    <string name="title_activity_resume_activity_list">resumeActivityList</string>
    <string name="titleText" />
    <string name="infoText" />
    <string name="nextStepText" />
    <string name="saveStepText" />
    <string name="prevStepText" />
</resources>
