<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cpp.rbkinney.gsd.NewLesson">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".975"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:text="@string/titleText"
            android:textAlignment="center"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/imageId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".4"
            android:adjustViewBounds="true"
            android:scaleType="fitStart" />

        <TextView
            android:id="@+id/infoTextId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:maxLines="15"
            android:scrollbars="vertical"
            android:text="@string/infoText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".025">

        <Button
            android:id="@+id/prevStepButtonId"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/prevStepText" />

        <!--<Button-->
        <!--android:id="@+id/saveStepButtonId"-->
        <!--android:layout_width="0px"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/saveStepText" />-->

        <Button
            android:id="@+id/nextStepButtonId"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/nextStepText" />
    </LinearLayout>


</LinearLayout>
